kubernetes/eks_clusterIP.yaml
#Cluster IP clientes
apiVersion: v1
kind: Service
metadata:
  name: svc-api-clientes
spec:
  selector:
    app: api-clientes
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5100
---

#Cluster IP enderecos
apiVersion: v1
kind: Service
metadata:
  name: svc-api-enderecos
spec:
  selector:
    app: api-enderecos
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5200
---

#Cluster IP catalogo
apiVersion: v1
kind: Service
metadata:
  name: svc-api-catalogo
spec:
  selector:
    app: api-catalogo
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5300
---

#Cluster IP inventario
apiVersion: v1
kind: Service
metadata:
  name: svc-api-inventario
spec:
  selector:
    app: api-inventario
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5400
